# stepup-core

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  devenv.nix  mkdocs.yaml  mkdocs.yml  pyproject.toml  versions.json
.github/: requirements-old.txt
.github/scripts/: extract-notes.sh
.github/workflows/: mkdocs.yaml  pytest.yaml  release.yaml  smoke.yaml
1.3.1/: objects.inv  plan.py
1.3.1/advanced_topics/amending_static_inputs/: main.sh  stdout.txt
1.3.1/advanced_topics/blocked_steps/: index.html
1.3.1/advanced_topics/cyclic_dependencies/: main.sh
1.3.1/advanced_topics/environment_variables/: index.html  stdout.txt
1.3.1/advanced_topics/here_and_root/: index.html
1.3.1/advanced_topics/introduction/: index.html
1.3.1/advanced_topics/optional_steps/: generate.py  main.sh
1.3.1/advanced_topics/pools/: stdout.txt
1.3.1/advanced_topics/static_deferred_glob/: graph_supplier.dot  index.html
1.3.1/development/: index.html
1.3.1/installation/: index.html
2.0/: 404.html  index.html  plan.py  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/changelog/: index.html
2.0.0/development/: index.html
2.0.0/installation/: index.html
2.0.0/license/: index.html
2.0.0/search/: search_index.json
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/changelog/: index.html
2.0.1/development/: index.html
2.0.1/installation/: index.html
2.0.1/license/: index.html
2.0/changelog/: index.html
2.0/development/: index.html
2.0/installation/: index.html
2.0/license/: index.html
2.0/search/: search_index.json
2.1/: 404.html  index.html  objects.inv  sitemap.xml
2.1/changelog/: index.html
2.1/development/: index.html
2.1/installation/: index.html
2.1/license/: index.html
2.1/search/: search_index.json
2.2/: 404.html  index.html  sitemap.xml
2.2/changelog/: index.html
2.2/development/: index.html
2.2/installation/: index.html
2.2/license/: index.html
3.0/: 404.html  index.html  plan.py  sitemap.xml
3.0/changelog/: index.html
3.0/development/: index.html
3.0/installation/: index.html
3.0/license/: index.html
3.0/search/: search_index.json
3.1/: 404.html  index.html  sitemap.xml
3.1/changelog/: index.html
3.1/development/: index.html
3.1/installation/: index.html
3.1/license/: index.html
3.1/search/: search_index.json
3.2/: 404.html  index.html  objects.inv  run_example.py  sitemap.xml
3.2/changelog/: index.html
3.2/development/: index.html
3.2/installation/: index.html
3.2/license/: index.html
3.2/search/: search_index.json
4.0/: 404.html  index.html  plan.py  sitemap.xml
4.0/changelog/: index.html
4.0/development/: index.html
4.0/installation/: index.html
4.0/license/: index.html
4.0/search/: search_index.json
asciinema/: .gitignore  README.md  docs-autocast.yaml  docs-runall.sh  insert_markers.py  interactive-autocast.yaml  interactive-markers.cast  interactive-runall.sh  template-autocast.yaml  template-markers.cast  template-runall.sh
dev/: 404.html  index.html  objects.inv  plan.py  run_example.py  sitemap.xml
dev/changelog/: index.html
dev/development/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/search/: search_index.json
docs/: changelog.md  clean_stdout.sed  development.md  index.md  installation.md  license.md  plan.py  run_example.py
docs/advanced_topics/: amending_static_inputs.md  amending_steps.md  blocked_steps.md  cyclic_dependencies.md  environment_variables.md  here_and_root.md  introduction.md  manual_cleaning.md  optional_steps.md  pools.md  render_jinja.md  resources.md  static_deferred_glob.md  static_named_glob.md  step_info.md  stepup_root.md  variable_substitution.md  volatile_outputs.md
docs/deprecated/: introduction.md  script_multiple.md  script_single.md  stepup.core.script.md
docs/extending/: action.md  api.md  command.md  console_scripts.md  introduction.md  tool.md
docs/getting_started/: automatic_cleaning.md  call.md  copy.md  copy_mkdir.md  dependencies.md  distributed_plans.md  failing_steps.md  first_runpy.md  first_step.md  interactive_usage.md  introduction.md  load_namespace.md  no_rules.md  script_multiple.md  script_single.md  static_files.md  static_glob.md  static_glob_conditional.md  static_root.md  static_tree.md  workdir.md
docs/migration/: from3to4.md  from_3x_to_40.md
docs/reference/: configuration.md  environment_variables.md  interactive.md  returncode.md  stepup.core.api.md  stepup.core.call.md  stepup.core.extapi.md  stepup.core.interact.md  stepup.core.nglob.md  stepup.core.path.md  stepup.core.stepinfo.md  stepup.core.utils.md
overrides/: main.html
site/: versions.json
site/1.3.1/: 404.html  index.html  sitemap.xml
stable/: 404.html  index.html  sitemap.xml
stable/changelog/: index.html
stable/development/: index.html
stable/installation/: index.html
stable/license/: index.html
stepup/core/: __init__.py  __main__.py  actions.py  api.py  assoc.py  asyncio.py  browse.py  builder.py  call.py  cascade.py  cattrs.py  clean.py  cleanup.py  config.py  constants.py  deferred_glob.py  director.py  dispatcher.py  enums.py  exceptions.py  executor.py  extapi.py  file.py  hash.py  hasher.py  interact.py  job.py  nglob.py  path.py  pytest.py  render_jinja.py  reporter.py  rpc.py  runner.py  scheduler.py  script.py  sqlite3.py  startup.py  static_root.py  static_tree.py  (+9 more)
tests/: conftest.py  core_common.py  echo_server_socket.py  echo_server_stdio.py  test_api.py  test_assoc.py  test_basics.py  test_call.py  test_cascade.py  test_cases.py  test_clean.py  test_cleanup.py  test_config.py  test_director.py  test_dispatcher.py  test_examples.py  test_executor.py  test_extapi.py  test_hash.py  test_job.py  test_nglob.py  test_paths.py  test_rpc.py  test_scheduler.py  test_script.py  test_sqlite3.py  test_step.py  test_stepinfo.py  test_trellis.py  test_tui.py  test_usage.py  test_utils.py  test_workflow.py
tests/cases/: README.md
tests/examples/: README.md  example.rc
tools/: .gitignore  analyze_perf.py  compare_perf.py
(+3252 files in other folders)
