[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stepup"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "StepUp Core provides the basic framework for the StepUp build tool"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs",
    "msgpack",
    "parse",
    "path",
    "rich",
    "watchdog",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "numpy",
    "matplotlib",
]

[project.urls]
Documentation = "https://reproducible-reporting.github.io/stepup-core/"
Issues = "https://github.com/reproducible-reporting/stepup-core/issues"
Source = "https://github.com/reproducible-reporting/stepup-core/"
Changelog = "https://reproducible-reporting.github.io/stepup-core/changelog/"

[project.scripts]
stepup = "stepup.core.tui:main"
cleanup = "stepup.core.cleanup:main"

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "PGH", "PL", "RUF", "C"]
ignore = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "C901"]

[tool.setuptools]
packages = ["stepup"]

[tool.setuptools_scm]
write_to = "stepup/core/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
